<resources>
    <string name="app_name">Chat Me</string>
    <string name="title_chats">Chats</string>
    <string name="title_friends">Friends</string>
    <string name="title_requests">Requests</string>
    <string name="title_all">Meet</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="profile">Profile</string>
    <string name="send_request">Send Friend Request</string>
    <string name="delete_request">Delete Request</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="new_account">Create New Account</string>
    <string name="change_status">Change Status</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="name">Display Name</string>
    <string name="re_password">Re-Password</string>
    <string name="job">Job</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="active_now">Active now</string>
    <string name="active">Active</string>
    <string name="loading">Loading...</string>
    <string name="friend">Friend</string>
    <string name="friends">Friends</string>
    <string name="cancel_request">Cancel Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="invalid_email_format">Invalid Email Address Format</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_validation">Password must be at least 6 characters</string>
    <string name="choose_image">Select Image</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="change_status_failed">Changing Status Failed</string>
    <string name="image_updated">Image Updated</string>
    <string name="uploading_img_failed">Uploading Image Failed</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="enter_re_password">Enter Re Password</string>
    <string name="password_not_match">Password not Match</string>
    <string name="enter_job">Enter Your Job</string>
    <string name="sign_up_failure">Signup Failed</string>
    <string name="check_internet">Network error. Please check your connection.</string>
</resources>