<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/space_10">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/space_50"
            android:src="@drawable/despacito" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/loginemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_5"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/loginpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:textAllCaps="false"
            android:id="@+id/loginbtn"
            android:layout_width="@dimen/space_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_30"
            android:gravity="center"
            android:text="@string/new_user"
            android:textColor="@color/textColor"
            android:textSize="@dimen/space_10" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/signupbtn"
            android:layout_width="@dimen/space_250"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/new_account"
            android:textColor="@color/white" />
    </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>