<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/friendBack"
        android:layout_width="@dimen/space_25"
        android:layout_height="@dimen/space_25"
        android:layout_margin="@dimen/space_10"
        android:src="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:contentDescription="@string/profile"
            android:id="@+id/friendImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_250"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginTop="@dimen/space_30"
            android:src="@drawable/ic_account_circle_black_24dp" />

        <TextView
            android:id="@+id/friendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/space_25" />


        <TextView
            android:id="@+id/friendJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/space_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friendsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/space_40"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/space_20" />

        <Button
            android:id="@+id/friendAddBTN"
            android:layout_width="@dimen/space_250"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/buttongreen"
            android:text="@string/send_request"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/friendDeleteBTN"
            android:layout_width="@dimen/space_250"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttongray"
            android:text="@string/delete_request"
            android:textColor="@color/white"
            android:visibility="invisible" />

    </LinearLayout>
</RelativeLayout>